Add the api to add group to biometric collections
