# storage/api-docs/api-docs.json
@@ -199,6 +199,91 @@
                 }
             }
         },
+        "/api/biometric-group": {
+            "post": {
+                "tags": [
+                    "Biometric Collection"
+                ],
+                "summary": "Creates new biometric group",
+                "description": "Creates new biometric group",
+                "operationId": "Creates new biometric group",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "return new biometric group"
+                    }
+                }
+            }
+        },
+        "/api/biometric-group/{id}": {
+            "delete": {
+                "tags": [
+                    "Biometric Group"
+                ],
+                "summary": "Delete biometric group",
+                "description": "Delete biometric group",
+                "operationId": "Delete biometric group",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of biometric group",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "return biometric group"
+                    }
+                }
+            }
+        },
+        "/api/biometric-group-user": {
+            "post": {
+                "tags": [
+                    "Biometric Collection"
+                ],
+                "summary": "Associates a biometric group with user",
+                "description": "Associates a biometric group with user",
+                "operationId": "Associates a biometric group with user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "userId": {
+                                        "type": "number"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "return biometric group"
+                    }
+                }
+            }
+        },
         "/api/biometric-procedure": {
             "get": {
                 "tags": [
